Update lorem ipsum dependency and take into account all its new parameters and enhanced behavior. Sentences base generation is now used instead of pararagraphs one.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -20,7 +20,12 @@ site {
 
 content {
   title = "Lorem Ipsum"
-  start-with-lorem-ipsum = false
+  start-with-lorem-ipsum = true
+  truncate = false
+  randomize = true
+  sentences-based = true
+  min-word-count = 142
+  max-word-count = 442
 }
 
 // ----------------------------------------------------------------
