Overall enhancements, add source code banner, add first unit tests, refactor configuration to add a config name 'prefix'

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,31 +1,34 @@
 // ----------------------------------------------------------------
 // Application config
 
-application {
-  name = "Lorem Ipsum"
-  code = "LoremIpsum"
-}
+lorem-ipsum {
 
-http {
-  listening-interface = "0.0.0.0"
-  listening-port = 8080
-}
+  application {
+    name = "Lorem Ipsum"
+    code = "LoremIpsum"
+  }
 
-site {
-  # just a prefix word, no slashes
-  prefix = ""
-  # How the site is known remotely
-  url = "http://127.0.0.1:8080"
-}
+  http {
+    listening-interface = "0.0.0.0"
+    listening-port = 8080
+  }
 
-content {
-  title = "Lorem Ipsum"
-  start-with-lorem-ipsum = true
-  truncate = false
-  randomize = true
-  sentences-based = true
-  min-word-count = 142
-  max-word-count = 442
+  site {
+    # just a prefix word, no slashes
+    prefix = ""
+    # How the site is known remotely
+    url = "http://127.0.0.1:8080"
+  }
+
+  content {
+    title = "Lorem Ipsum"
+    start-with-lorem-ipsum = true
+    truncate = false
+    randomize = true
+    sentences-based = true
+    min-word-count = 142
+    max-word-count = 442
+  }
 }
 
 // ----------------------------------------------------------------
