Make this app usable as a library

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,7 +1,8 @@
-// ----------------------------------------------------------------
-// Application config
 
 lorem-ipsum {
+
+  // ----------------------------------------------------------------
+  // Application config
 
   application {
     name = "Lorem Ipsum"
@@ -29,30 +30,32 @@ lorem-ipsum {
     min-word-count = 142
     max-word-count = 442
   }
-}
 
-// ----------------------------------------------------------------
-// Akka & akka-http framework configuration
+  // ----------------------------------------------------------------
+  // Akka & akka-http framework configuration
+  // This configuration is used when this project is used as an app and not as a lib
 
-akka {
-  daemonic = off
-  http {
-    server {
-      idle-timeout = 10s
-      max-connections = 500
-    }
-    client {
-      connecting-timeout = 10s
-      idle-timeout = 10s
-      parsing {
-        max-header-count = 420
+  akka {
+    daemonic = off
+    http {
+      server {
+        idle-timeout = 10s
+        max-connections = 500
+      }
+      client {
+        connecting-timeout = 10s
+        idle-timeout = 10s
+        parsing {
+          max-header-count = 420
+        }
+      }
+      host-connection-pool {
+        max-connections = 100
       }
     }
-    host-connection-pool {
-      max-connections = 100
-    }
+    loggers = ["akka.event.slf4j.Slf4jLogger"]
+    loglevel = "INFO"
+    logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
   }
-  loggers = ["akka.event.slf4j.Slf4jLogger"]
-  loglevel = "INFO"
-  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+
 }
