--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -41,6 +41,7 @@ lorem-ipsum {
       server {
         idle-timeout = 10s
         max-connections = 500
+        remote-address-header = on
       }
       client {
         connecting-timeout = 10s
