Switch to yamusca mustache library

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -19,16 +19,25 @@ lorem-ipsum {
     prefix = ""
     # How the site is known remotely
     url = "http://127.0.0.1:8080"
+    url = ${?LOREM_IPSUM_URL}
   }
 
   content {
     title = "Lorem Ipsum"
+    title = ${?LOREM_IPSUM_TITLE}
     start-with-lorem-ipsum = true
+    start-with-lorem-ipsum = ${?LOREM_IPSUM_START_WITH_LOREM}
     truncate = false
     randomize = true
     sentences-based = true
     min-word-count = 142
+    min-word-count = ${?LOREM_IPSUM_WORD_COUNT_MIN}
     max-word-count = 442
+    max-word-count = ${?LOREM_IPSUM_WORD_COUNT_MAX}
+    background-color = "#F0F0F0"
+    background-color = ${?LOREM_IPSUM_BACKGROUND_COLOR}
+    foreground-color = "#505050"
+    foreground-color = ${?LOREM_IPSUM_FOREGROUND_COLOR}
   }
 
   // ----------------------------------------------------------------
