--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -51,6 +51,8 @@ lorem-ipsum {
         idle-timeout = 10s
         max-connections = 500
         remote-address-header = on
+        remote-address-attribute = on
+        user-agent-header = on
       }
       client {
         connecting-timeout = 10s
