--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,5 +1,8 @@
 
 lorem-ipsum {
+  meta-info {
+    // populated externally during the build
+  }
 
   // ----------------------------------------------------------------
   // Application config
@@ -11,12 +14,15 @@ lorem-ipsum {
 
   http {
     listening-interface = "0.0.0.0"
+    listening-interface = ${?LOREM_IPSUM_LISTEN_IP}
     listening-port = 8080
+    listening-port = ${?LOREM_IPSUM_LISTEN_PORT}
   }
 
   site {
     # just a prefix word, no slashes
     prefix = ""
+    prefix = ${?LOREM_IPSUM_PREFIX}
     # How the site is known remotely
     url = "http://127.0.0.1:8080"
     url = ${?LOREM_IPSUM_URL}
