Add two new methods to the API

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -28,22 +28,27 @@ lorem-ipsum {
     url = ${?LOREM_IPSUM_URL}
   }
 
-  content {
+  content { // Only for the home page
     title = "Lorem Ipsum"
     title = ${?LOREM_IPSUM_TITLE}
+    min-word-count = 142
+    max-word-count = 442
+    background-color = "#F0F0F0"
+    background-color = ${?LOREM_IPSUM_BACKGROUND_COLOR}
+    foreground-color = "#505050"
+    foreground-color = ${?LOREM_IPSUM_FOREGROUND_COLOR}
+  }
+
+  generator {
     start-with-lorem-ipsum = true
     start-with-lorem-ipsum = ${?LOREM_IPSUM_START_WITH_LOREM}
     truncate = false
     randomize = true
     sentences-based = true
-    min-word-count = 142
+    min-word-count = 42
     min-word-count = ${?LOREM_IPSUM_WORD_COUNT_MIN}
-    max-word-count = 442
+    max-word-count = 424242
     max-word-count = ${?LOREM_IPSUM_WORD_COUNT_MAX}
-    background-color = "#F0F0F0"
-    background-color = ${?LOREM_IPSUM_BACKGROUND_COLOR}
-    foreground-color = "#505050"
-    foreground-color = ${?LOREM_IPSUM_FOREGROUND_COLOR}
   }
 
   // ----------------------------------------------------------------
