Fix random 404 issues related to getFromResource

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -72,6 +72,10 @@ lorem-ipsum {
           max-header-count = 420
         }
       }
+      routing {
+        # Enables/disables ETag and `If-Modified-Since` support for FileAndResourceDirectives
+        file-get-conditional = off
+      }
       host-connection-pool {
         max-connections = 100
       }
