--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -52,10 +52,10 @@ lorem-ipsum {
   }
 
   // ----------------------------------------------------------------
-  // Akka & akka-http framework configuration
+  // pekko & pekko-http framework configuration
   // This configuration is used when this project is used as an app and not as a lib
 
-  akka {
+  pekko {
     daemonic = off
     http {
       server {
@@ -80,9 +80,9 @@ lorem-ipsum {
         max-connections = 100
       }
     }
-    loggers = ["akka.event.slf4j.Slf4jLogger"]
+    loggers = ["org.apache.pekko.event.slf4j.Slf4jLogger"]
     loglevel = "INFO"
-    logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+    logging-filter = "org.apache.pekko.event.slf4j.Slf4jLoggingFilter"
   }
 
 }
